# pyeeprom

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/changelog/: 2026.04.13-create-pyeeprom-common.rst  2026.04.15-add-eeprom-page.rst  2026.04.15-add-pyeeprom-transports.rst  2026.04.15-add-region.rst  2026.04.15-add-smbus-transport.rst  2026.04.15-add-transport.rst  2026.04.17-add-base-eeprom.rst  2026.04.17-add-i2c-eeprom-factory.rst  2026.04.17-add-i2c-eeprom.rst  2026.04.17-add-pyeeprom-eeprom.rst  2026.04.20-add-cat24c32f-eeprom.rst  2026.04.27-add-at24c01d-eeprom.rst  2026.04.28-add-at24c04d-eeprom.rst  2026.04.30-add-at24c08d-eeprom.rst  2026.04.30-add-at24lc1025-eeprom.rst  README.md
docs/source/: api_reference.rst  base_eeprom.rst  changelog.rst  common.rst  conf.py  eeprom.rst  eeprom_page.rst  generate_changelog.py  i2c.rst  i2c_eeprom.rst  i2c_eeprom_factory.rst  index.rst  installation.rst  region.rst  smbus_transport.rst  transport.rst  transports.rst  usage.rst  user_guide.rst
docs/source/extensions/: execute_pyfile.py
pyeeprom/: __init__.py
pyeeprom/common/: __init__.py  constraints.py  eeprom_page.py  region.py
pyeeprom/eeprom/: __init__.py  base_eeprom.py  i2c_eeprom.py
pyeeprom/eeprom/i2c/: __init__.py  at24c01d.py  at24c04d.py  at24c08d.py  at24lc1025.py  cat24c32f.py
pyeeprom/transports/: smbus_transport.py  transport.py
tests/common/: test_constraints.py  test_eeprom_page.py  test_region.py
tests/eeprom/: test_base_eeprom.py  test_i2c_eeprom.py
tests/transports/: test_smbus_transport.py
