[project]
name = "pyeeprom"
version = "0.1.0"
description = ""
authors = [
    {name = "Jacob Zarnstorff",email = "jacobzarnstorff@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"


[tool.isort]
line_length = 120
profile = "black"


[tool.black]
line-length = 120
target-version = ["py312"]
