[project]
name = "pyeeprom"
version = "0.1.0"
description = ""
authors = [
    {name = "Jacob Zarnstorff",email = "jacobzarnstorff@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
pytest = "^9.0.3"
pytest-mock = "^3.15.1"
pytest-cov = "^7.1.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^9.1.0"

[tool.isort]
line_length = 120
profile = "black"


[tool.black]
line-length = 120
target-version = ["py312"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pyeeprom --cov-report term-missing -v"
